Static files (css) enabled

--- a/dbproject/template/index.html
+++ b/dbproject/template/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>My Home Page</title>           
-	<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href= "/static/css/style.css" media = "screen" />
  
 </head>
 <body>
