html/css and python views for sign in and registration page defined

--- a/dbproject/template/index.html
+++ b/dbproject/template/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html lang="en">
+<!-- Author: Dax Gerts
+	Date: 18 November 2015
+	Description: Home page design for webstore -->
+<img src="/static/media/blueprint_wide.jpg"/>
 <head>
-    <title>My Home Page</title>           
+    <!-- Title pending for webstore name -->
+    <title>WebstoreSQL</title>           
 	<link rel="stylesheet" type="text/css" href= "/static/css/style.css" media = "screen" />
- 
+ 	
 </head>
-<body>
-<p>My Content</p>    
+
+<body id = "page1">
+	<div id = "main">
+		<div id = "header">
+			<p>Testing testing testing, 1 2 3</p>
+		</div>
+	</div> 
+
+  
 </body>
 </html>
