--- a/dbproject/static/css/style.css
+++ b/dbproject/static/css/style.css
@@ -1,448 +1,137 @@
-* { 
-	margin:0;
-	padding:0;
-}
-html, body { 
-	height:100%;
-}
-body { 
-	
-	background:#fff; 
-	font-family:Tahoma, Geneva, sans-serif;
-	font-size:100%; 
-	line-height:.8125em;
-	color:#6e6e6e;
+@import url(http://weloveiconfonts.com/api/?family=fontawesome);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
+[class*="fontawesome-"]:before {
+  font-family: 'FontAwesome', sans-serif;
 }
 
-img {
-	border:0; 
-	vertical-align:top; 
-	text-align:left;
-}
-object { 
-	vertical-align:top; 
-	outline:none;
-}
-ul, ol { 
-	list-style:none;
+* {
+  box-sizing: border-box;
 }
 
-.fleft { 
-	float:left;
-}
-.fright { 
-	float:right;
-}
-.clear { 
-	clear:both;
+html {
+  height: 100%;
 }
 
-.col-1, .col-2, .col-3 { 
-	float:left;
+body {
+  background-color: #2c3338;
+  color: #606468;
+  font: 400 0.875rem/1.5 "Open Sans", sans-serif;
+  margin: 0;
+  min-height: 100%;
 }
 
-.alignright { 
-	text-align:right;
-}
-.aligncenter { 
-	text-align:center;
-}
-
-.wrapper { 
-	width:100%;
-	overflow:hidden;
-}
-.container { 
-	width:100%;
-}
-
-
-
-
-/*==== GLOBAL =====*/
-#main {
-	width:766px; 
-	margin:0 auto;
-	font-size:.69em;
-	position:relative;
-}
-
-#header {
-	height:271px;
-	overflow:hidden;
-	padding:0 10px;
-}
-#content {
-	padding:3px 10px 3px 10px;
-}
-#footer {
-	background:#041b33;
-	margin:0 10px;
-	padding:18px 15px 16px 20px;
-}
-
-
-/*----- forms parameters -----*/
-
-input, select, textarea { 
-	font-family:Tahoma, Geneva, sans-serif;
-	font-size:1em;
-	vertical-align:middle;
-	font-weight:normal;
-}
-
-
-/*----- other -----*/
-.img-indent { 
-	margin:0 10px 0 0; 
-	float:left;
-}
-.img-box { 
-	width:100%; 
-	overflow:hidden; 
-	padding-bottom:20px;
-	border-bottom:1px solid #cfd3d8;
-	margin-bottom:19px;
-}
-	.img-box img { 
-		float:left; 
-		margin:0 10px 0 0;
-	}
-
-.extra-wrap { 
-	overflow:hidden;
-}
-
-
-p {
-	margin-bottom:16px;
-}
-.p1 { 
-	margin-bottom:8px;
-}
-.p2 { 
-	margin-bottom:16px;
-}
-.p3 { 
-	margin-bottom:24px;
-}
-
-/*----- txt, links, lines, titles -----*/
 a {
-	color:#c91d00; 
-	outline:none;
+  color: #eee;
+  outline: 0;
+  text-decoration: none;
 }
-a:hover{
-	text-decoration:none;
-}
-h2 {
-	font-size:1em;
-	color:#fff;
-	background:#041b33;
-	padding:17px 0 17px 11px;
-	text-transform:uppercase;
-}
-h3 {
-	font-size:10px;
-	font-weight:normal;
-	text-transform:uppercase;
-	color:#c91d00;
-	margin-bottom:13px;
+a:focus, a:hover {
+  text-decoration: underline;
 }
 
-
-.txt1 {
-	color:#041b33;
-}
-.price {
-	font-size:18px;
-	color:#c91d00;
-	font-weight:bold;
-	}
-
-.link1 { 
-	display:block;
-	float:left;
-	background:url(images/link1-bgd.gif) left top repeat-x; 
-	color:#fff; 
-	text-decoration:none;
+input {
+  border: 0;
+  color: inherit;
+  font: inherit;
+  margin: 0;
+  outline: 0;
+  padding: 0;
+  -webkit-transition: background-color .3s;
+          transition: background-color .3s;
 }
 
-
-
-/*==================boxes====================*/
-.box {
-	border:1px solid #cfd3d8;
-	padding:9px;
-	margin:-264px 0 -33px 0;
-	background:#fff;
-	height:1%;
-	position:relative;
-}
-	.box .inner { 
-		padding:0 0 0 0;
-	}
-	
-	.cart-box {
-		background:#e8eaed;
-		padding:9px 10px 18px 10px;
-		}
-		
-		.languages {
-			border-bottom:1px dotted #000;
-			padding:0 0 18px 0;
-			margin-bottom:10px;
-			text-align:center;
-			height:1%;
-			}
-			.languages dt {
-				font-weight:bold;
-				color:#585858;
-				padding-bottom:8px;
-				}
-			.languages dd ul li {
-				display:inline;
-				border-left:1px solid #bdbdbd;
-				padding:0 6px 0 9px;
-				}
-			.languages dd ul li.first {
-				border:none;
-				}
-		
-		.shop-cart {
-			padding:17px 0 0 15px;
-			}
-		.shop-cart dt {
-			font-weight:bold;
-			color:#585858;
-			background:url(images/cart.gif) no-repeat 0 0;
-			padding:0 0 10px 33px;
-			}
-			.shop-cart dd strong {
-				color:#c91d00;
-				}
-
-.address { 
-	float:left;
-}
-	.address dt {
-		margin-bottom:13px;
-	}
-		.address dt strong {
-			color:#c91d00;
-			}
-	.address dd { 
-		clear:both;
-	}
-		.address dd span { 
-			float:left;
-			width:68px;
-		}
-
-
-/*===== header =====*/
-#header .col-1 {
-	width:359px;
-}
-	#header .logo {
-		padding:24px 0 8px 9px;
-		}
-#header .col-2 {
-	width:192px;
-	float:right;
-}
-	#header .top-nav {
-		text-align:right;
-		padding:34px 2px 21px 0;
-		}
-		#header .top-nav li {
-			display:inline;
-			margin-left:-3px;
-			}
-	
-	#header .nav {
-		background:#041b33;
-		width:151px;
-		padding:39px 20px 38px 21px;
-		}
-		#header .nav li {
-			background:url(images/line-hor.gif) 0 100% repeat-x;
-			padding:0 0 6px 0;
-			margin-bottom:4px;
-			overflow:hidden;
-			width:100%;
-			vertical-align:top;
-			}
-		#header .nav li.last {
-			margin-bottom:0;
-			padding-bottom:0;
-			background:none;
-			}
-			#header .nav li a {
-				font-size:16px;
-				color:#f7f6f2;
-				text-decoration:none;
-				font-weight:bold;
-				background:url(images/nav-marker.gif) no-repeat 0 4px;
-				padding:0 0 0 30px;
-				font-family:Arial, Helvetica, sans-serif;
-				}
-			#header .nav li a:hover {
-				color:#c91d00;
-				}
-
-/*===== content =====*/
-#content .indent {
-	padding:17px 10px 0 11px;
+.site__container {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding: 3rem 0;
 }
 
-table, td {
-	padding:0;
-	vertical-align:top;
-	border-collapse:collapse
-	}
-	td.cell-1 {
-		border-right:1px solid #cfd3d8;
-		border-bottom:1px solid #cfd3d8;
-		padding-bottom:20px;
-		padding-right:7px;
-		}
-	td.cell-2 {
-		border-bottom:1px solid #cfd3d8;
-		padding-bottom:20px;
-		padding-left:10px;
-		}
-	td.cell-3 {
-		border-right:1px solid #cfd3d8;
-		padding-top:20px;
-		padding-right:7px;
-		}
-	td.cell-4 {
-		padding-top:20px;
-		padding-left:10px;
-		}
-		
-	
-	
-	
-	.banners li {
-		padding-bottom:3px;
-		}
-	.banners li.last {
-		padding-bottom:0;
-		}
-	
-	
-	.categories {
-		background:#e8eaed;
-		padding:5px 10px;
-		}
-		.categories li {
-			background:url(images/marker1.gif) no-repeat 0 7px;
-			padding:0 0 0 22px;
-			border-bottom:1px solid #bdc3c9;
-			vertical-align:top;
-			}
-		.categories li.last {
-			border-bottom:none;
-			padding-bottom:0;
-			margin-bottom:0;
-			}
-			.categories li a {
-				border-left:1px solid #bdc3c9;
-				line-height:19px;
-				display:inline-block;
-				color:#041b33;
-				text-decoration:none;
-				padding-left:10px;
-				}
-			.categories li a:hover {
-				text-decoration:underline;
-				}
-	
-	
-	.pagination {
-		padding-bottom:10px;
-		width:100%;
-		overflow:hidden;
-		}
-		.pagination a {
-			color:#041b33;
-			}
-
-/*===== footer =====*/
-#footer {
-	color:#b9babb;
-	font-weight:bold;
+.form input[type="password"], .form input[type="text"], .form input[type="submit"] {
+  width: 100%;
 }
-	#footer .copy {
-		margin-bottom:5px;
-		}
-	#footer a {
-		color:#b9babb;
-		}
-	
-	#footer .fright {
-		
-		padding:4px 0 6px 0;
-		}
-
-
-/*----- forms -----*/
-#currencies fieldset {
-	border:none;
-	padding:7px 0 19px 15px;
-	border-bottom:1px dotted #000;
-	}
-	#currencies strong {
-		display:block;
-		color:#585858;
-		font-weight:bold;
-		padding-bottom:6px;
-		}
-	#currencies select {
-		width:122px;
-		font-size:10px;
-		font-weight:bold;
-		color:#585858;
-		border:1px solid #6e6e6e;
-		}
-
-#contacts-form fieldset {
-	border:none;
-	width:100%;
-	overflow:hidden;
-	display:block;
+.form--login {
+  color: #606468;
 }
-	#contacts-form .col-1 {
-		width:170px !important;
-		margin-right:0 !important;
-	}
-	#contacts-form .col-2 {
-		width:157px !important;
-		margin-right:0 !important;
-	}
-	#contacts-form label {
-		display:block;
-		height:25px;
-		overflow:hidden;
-	}
-		#contacts-form input {
-			color:#a4a4a4;
-			border:1px solid #a4a4a4;
-			background:none;
-			padding:2px 0 2px 5px;
-			width:160px;
-		}
-		#contacts-form textarea {
-			color:#a4a4a4;
-			border:1px solid #a4a4a4;
-			background:none;
-			padding:2px 0 2px 5px;
-			width:150px;
-			overflow:auto;
-			height:63px;
-			margin-bottom:9px;
-		}
+.form--login label,
+.form--login input[type="text"],
+.form--login input[type="password"],
+.form--login input[type="submit"] {
+  border-radius: 0.25rem;
+  padding: 1rem;
+}
+.form--login label {
+  background-color: #363b41;
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+.form--login input[type="text"], .form--login input[type="password"] {
+  background-color: #3b4148;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+}
+.form--login input[type="text"]:focus, .form--login input[type="text"]:hover, .form--login input[type="password"]:focus, .form--login input[type="password"]:hover {
+  background-color: #434A52;
+}
+.form--login input[type="submit"] {
+  background-color: #ea4c88;
+  color: #eee;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.form--login input[type="submit"]:focus, .form--login input[type="submit"]:hover {
+  background-color: #d44179;
+}
+.form__field {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 1rem;
+}
+.form__input {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
 
-/*==========================================*/
+.align {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.hidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
+.text--center {
+  text-align: center;
+}
+
+.grid__container {
+  margin: 0 auto;
+  max-width: 20rem;
+  width: 90%;
+}
