register/login working, kicksass changes and formatting

--- a/dbproject/template/index.html
+++ b/dbproject/template/index.html
@@ -3,7 +3,7 @@
 <!-- Author: Dax Gerts
 	Date: 18 November 2015
 	Description: Home page design for webstore -->
-<img src="/static/media/blueprint_wide.jpg"/>
+<!--<img src="/static/media/blueprint_wide.jpg"/>-->
 <head>
     <!-- Title pending for webstore name -->
     <title>WebstoreSQL</title>           
@@ -11,13 +11,21 @@
  	
 </head>
 
-<body id = "page1">
-	<div id = "main">
-		<div id = "header">
-			<p>Testing testing testing, 1 2 3</p>
-		</div>
-	</div> 
+<body class="align">
+	<div class="site__container">
+	<div class="grid__container">
+    
+    <div id = "header">
+		<h1>Webstore Site Index</h1>
+	</div>
+	<div id = "index body">
+		<p>Login</p>
+		<p>Register</p>
+		<p>Browse</p>
+		<p>Account</p>
+	</div>
 
-  
+   
+    
 </body>
 </html>
