--- a/dbproject/template/auth.html
+++ b/dbproject/template/auth.html
@@ -19,14 +19,21 @@
 		{% if next %}
 		<input type="hidden" name="next" value="{{ next }}"/>
 		{% endif %}
+        {{ form.non_field_errors }}
         <div class="form__field">
+          {{ form.username.errors }}
+          {{ form.username.label_tag }}
           <label class="fontawesome-user" for="login__username"><span class="hidden">Username</span></label>
-          <input id="login__username" type="text" class="form__input" placeholder="Username" value = "{{ username}}"required>
+          {{ form.username }}
+          <!--<input id="login__username" type="text" class="form__input" placeholder="Username" value = "{{ username}}"required>-->
         </div>
 
         <div class="form__field">
+          {{ form.password.errors }}
+          {{ form.password.label_tag }}
           <label class="fontawesome-lock" for="login__password"><span class="hidden">Password</span></label>
-          <input id="login__password" type="password" class="form__input" placeholder="Password" value="" required>
+          {{ form.password }}
+          <!--<input id="login__password" type="password" class="form__input" placeholder="Password" value="" required>-->
         </div>
 
         <div class="form__field">
