login/register links working, fixed bug with GET requests to Register page

--- a/dbproject/template/index.html
+++ b/dbproject/template/index.html
@@ -19,8 +19,8 @@
 		<h1>Webstore Site Index</h1>
 	</div>
 	<div id = "index body">
-		<p>Login</p>
-		<p>Register</p>
+		<p><a href="login">Login</a></p>
+		<p><a href="register">Register</a></p>
 		<p>Browse</p>
 		<p>Account</p>
 	</div>
