--- a/dbproject/template/auth.html
+++ b/dbproject/template/auth.html
@@ -42,7 +42,7 @@
 
       </form>
 
-      <p class="text--center">Not a member? <a href="register.html">Sign up now</a> <span class="fontawesome-arrow-right"></span></p>
+      <p class="text--center">Not a member? <a href="/register">Sign up now</a> <span class="fontawesome-arrow-right"></span></p>
 
     </div>
 
