--- a/dbproject/template/account.html
+++ b/dbproject/template/account.html
@@ -16,14 +16,9 @@
 	<div class="grid__container">
     
     <div id = "header">
-		<h1>Webstore Site Index</h1>
+		<h1>Account: Test Page</h1>
 	</div>
-	<div id = "index body">
-		<p><a href="login">Login</a></p>
-		<p><a href="register">Register</a></p>
-		<p><a href="browse">Browse</a></p>
-		<p><a href="account">Account</a></p>
-	</div>
+	
 
    
     
