Updated some routing, added beginning of dropdown in browse

--- a/dbproject/template/browse.html
+++ b/dbproject/template/browse.html
@@ -8,16 +8,40 @@
     <!-- Title pending for webstore name -->
     <title>WebstoreSQL</title>           
 	<link rel="stylesheet" type="text/css" href= "/static/css/style.css" media = "screen" />
- 	
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
 </head>
 
 <body class="align">
+	<div id = "header">
+	
 	<div class="site__container">
 	<div class="grid__container">
-    
-    <div id = "header">
-		<h1>Browse: Test Page</h1>
+	
+	<h1>Browse: Test Pages</h1>
 	</div>
+
+    <div class = "container">
+    	<div class="dropdown">
+		<button class="btn btn-primary dropdown-toggle" type="button" ata-toggle="dropdown">Dropdown Menu
+		<span class="caret"></span></button>
+		<ul class="dropdown-menu">
+		    <li><a href="#">HTML</a></li>
+		    <li><a href="#">CSS</a></li>
+		    <li><a href="#">JavaScript</a></li>
+		</ul>
+	</div>
+
+	<table id="Products" >
+		<th> 1</th>
+	</table>	
+		
+
+
+	</div>
+    
 	
 
    
