--- a/dbproject/template/browse.html
+++ b/dbproject/template/browse.html
@@ -28,16 +28,40 @@
 		<button class="btn btn-primary dropdown-toggle" type="button" ata-toggle="dropdown">Dropdown Menu
 		<span class="caret"></span></button>
 		<ul class="dropdown-menu">
-		    <li><a href="#">HTML</a></li>
-		    <li><a href="#">CSS</a></li>
-		    <li><a href="#">JavaScript</a></li>
+		    <li><a href="#">Change1</a></li>
+		    <li><a href="#">Change2</a></li>
+		    <li><a href="#">PossiblyChange3</a></li>
 		</ul>
 	</div>
-
+	{ % if product_list % }
 	<table id="Products" >
-		<th> 1</th>
+		<tr style="font: bold"> 
+			<th> product_id </th>
+			<th> product_description </th>
+			<th> product_price </th>
+			<th> product_active </th>
+			<th> product_stock_quantity </th>
+			<th> supplys </th>
+			<th> order </th>
+			<th> contains </th>
+			<th> product_name </th>
+		</tr>
+		<tr ng-repeat="p in product_list">
+			<td> p.product_id </td>
+			<td> p.product_description </td>
+			<td> p.product_price </td>
+			<td> p.product_active </td>
+			<td> p.product_stock_quantity </td>
+			<td> p.supplys </td>
+			<td> p.order </td>
+			<td> p.contains </td>
+			<td> p.product_name </td>
+		</tr>
 	</table>	
-		
+
+	{ % else % }
+		NO PRODUCTS TO DISPLAY
+	{ % end if% }
 
 
 	</div>
