--- a/dbproject/template/index.html
+++ b/dbproject/template/index.html
@@ -19,10 +19,10 @@
 		<h1>Webstore Site Index</h1>
 	</div>
 	<div id = "index body">
-		<p><a href="login">Login</a></p>
-		<p><a href="register">Register</a></p>
-		<p><a href="browse">Browse</a></p>
-		<p><a href="account">Account</a></p>
+		<p><a href="/login">Login</a></p>
+		<p><a href="/register">Register</a></p>
+		<p><a href="/browse">Browse</a></p>
+		<p><a href="/account">Account</a></p>
 	</div>
 
    
