--- a/dbproject/template/browse.html
+++ b/dbproject/template/browse.html
@@ -22,7 +22,7 @@
 	
 	<h1>Browse: Test Pages</h1>
 	</div>
-
+	{{product_list}}
     <div class = "container">
     	<div class="dropdown">
 		<button class="btn btn-primary dropdown-toggle" type="button" ata-toggle="dropdown">Dropdown Menu
