update account functional, not pretty

--- a/dbproject/template/account.html
+++ b/dbproject/template/account.html
@@ -24,7 +24,7 @@
     <div class="form__field">
           {{ form.action.errors }}
           {{ form.action.label_tag }}
-          <label class="fontawesome-user" for="register__username"><span class="hidden">Action</span></label>
+          <label class="fontawesome-user" for="login__password"><span class="hidden">Action</span></label>
           {{ form.action}}
           <!--<input id="register__username" type="text" class="form__input" placeholder="Username" value = "{{ username}}"required>-->
         </div>
@@ -32,7 +32,7 @@
     <div class="form__field">
           <input type="submit" value="Confirm Action"/>
         </div>
-   
+		<p class="text--center">Done here? <a href="/index">Continue Browsing</a> <span class="fontawesome-arrow-right"></span></p>   
 
     </div>
 
