--- a/dbproject/static/css/style.css
+++ b/dbproject/static/css/style.css
@@ -135,3 +135,18 @@ input {
   max-width: 20rem;
   width: 90%;
 }
+table, td, th{
+  border: 1px solid white;
+  padding: 5px;
+
+}
+.table1 tr:nth-child(odd) {
+  background-color: lightblue;
+}
+.table1 tr:nth-child(even) {
+  background-color: white;
+}
+
+#go {
+  background-color: blue;
+}
