--- a/dbproject/template/browse.html
+++ b/dbproject/template/browse.html
@@ -23,8 +23,8 @@
 	</div>
 	<h2>
 		<form action="/search/">
-			<input type="text" name="spec" id="q" value="{{ query }}" />
-			<input type="submit" value="Search">
+			<input type="text" name="q" id="id_q" value="{{ query }}" />
+			<input type="submit" value="Search" />
 		</form>
 	</h2>
     <div class="dropdown" style="margin-bottom:10px;">
