Beginning of Orders and order placement and stuff

--- a/dbproject/template/index.html
+++ b/dbproject/template/index.html
@@ -21,8 +21,10 @@
 	<div id = "index body">
 		<p><a href="/login">Login</a></p>
 		<p><a href="/register">Register</a></p>
-		<p><a href="/browse">Browse</a></p>
+		<p><a href="/browse">Browse</a></p>		
+		<p><a href="/order">Order</a></p>
 		<p><a href="/account">Account</a></p>
+		
 	</div>
 
    
