Order - can add one item only

--- a/dbproject/template/orderPlaced.html
+++ b/dbproject/template/orderPlaced.html
@@ -50,6 +50,11 @@
 	</table>
 	{% endif %}
 
+	{% if productsInOrder %}
+	<h2> Products In Order: productsInOrder </h2>
+	{% else %}
+	<h2> No products in order </h2>
+
 
 	</div>
     
