--- a/dbproject/template/order.html
+++ b/dbproject/template/order.html
@@ -35,9 +35,18 @@
 		<form>
 			Type your Product Name: <input type="Text" name="productName" value="{{ productName }}"/>
 			Select your Number to Order: <input type="Number" name="quantity" min="0" value="{{ quantity }}"/>
-			<input type="Submit" value="Generate Cost" onclick="javascript: form.action='/generateCost/';">
+			<input type="Submit" value="Generate Cost" onclick="javascript: form.action='/updateOrder/';">
 		</form>
 	</h2>
+
+
+	{% if productsInOrder %}
+	<h2> Products In Order: {{productsInOrder}} </h2>
+	<h2> Order Price: {{price_of_order}} </h2>
+
+	{% else %}
+	<h2> No products in order </h2>
+	{% endif %}
 	</div>
     
 	
