--- a/dbproject/template/order.html
+++ b/dbproject/template/order.html
@@ -34,20 +34,26 @@
 	<h2>
 		<form>
 			Type your Product Name: <input type="Text" name="productName" value="{{ productName }}"/>
-			Select your Number to Order: <input type="Number" name="quantity" min="0" value="{{ quantity }}"/>
-			<input type="Submit" value="Generate Cost" onclick="javascript: form.action='/updateOrder/';">
+			Select your Number to Order (NOT WORKING): <input type="Number" name="quantity" min="0" value="{{ quantity }}"/>
+			<input type="Submit" value="Add to Order" onclick="javascript: form.action='/updateOrder/';">
 
-			Tracking what's in order so far
-			<input type="text" name="productsInOrder" value="{{productsInOrder}}">
-			Tracking price so far
-			<input type="text" name="price_of_order" value="{{price_of_order}}">
+			<div style="display: ">
+				Tracking what's in order so far
+				<input type="text" name="productsInOrder" value="{{productsInOrder}}">
+				Tracking price so far
+				<input type="text" name="price_of_order" value="{{price_of_order}}">
+			</div>
 
+			<input type="Submit" value="Finalize Order" onclick="javascript: form.action='/placeOrder/';">
 		</form>
 	</h2>
 
 
 	{% if productsInOrder %}
-	<h2> Products In Order: {{productsInOrder.product_name}} </h2>
+	<h2> Products In Order: </h2>
+	{% for p in productsInOrder %}
+		<br>{{p.product_name}} 
+	{% endfor %}
 	<h2> Order Price: {{price_of_order}} </h2>
 
 	{% else %}
@@ -55,7 +61,7 @@
 	{% endif %}
 
 	{% if errorMessage %}
-	{{errorMessage}}
+	<h2>{{errorMessage}}</h2>
 	{% endif %}
 	</div>
     
