--- a/dbproject/template/orderPlaced.html
+++ b/dbproject/template/orderPlaced.html
@@ -33,6 +33,7 @@
 	</h1>
 
 	{% if orders %}
+	<h2>num in order: {{numInOrder}}</h2>
 	<table>
 		<tr>
 			<td>Order ID</td>
@@ -50,10 +51,6 @@
 	</table>
 	{% endif %}
 
-	{% if productsInOrder %}
-	<h2> Products In Order: productsInOrder </h2>
-	{% else %}
-	<h2> No products in order </h2>
 
 
 	</div>
