Order product view upon placed order, need to create order object still

--- a/dbproject/template/browse.html
+++ b/dbproject/template/browse.html
@@ -43,6 +43,7 @@
 
     <div ng-hide="">
 		{% if results %}
+		{{results}}
 		<table style="padding: 5px; font-size:150%" id="Products">
 			
 			<tr style="font: bold"> 
