--- a/dbproject/template/orderPlaced.html
+++ b/dbproject/template/orderPlaced.html
@@ -29,24 +29,35 @@
 	
 
 
-	<h1>Orders Placed
+	<h1>Order Placed!
 	</h1>
+	{% if productIDsInOrder %}
+	<h2>Here are the Products you ordered:</h2>
+		<table>
 
-	{% if thing %}
-	{{thing}}
-	{% endif %}
-	
-	{% if stringOfProductNames %}
-	<h2>{{stringOfProductNames}}</h2>
+			<th>Product Name: </th>
+			<th>Product ID: </th>
+			<th>Product Price: </th>
+
+			{% for product in productIDsInOrder %}
+
+			<tr>
+				<td>{{product.product_name}}</td>
+				<td>{{product.product_id}}</td>
+				<td>{{product.product_price}}</td>
+			<tr>
+			
+			{% endfor %}
+		</table>
 	{% endif %}
 
-	{% if arrayOfProductNames %}
-	<h2>{{arrayOfProductNames}}</h2>
-	{% endif %}
 
-	{% if stringOfProductIDs %}
-	<h2>{{stringOfProductIDs}}</h2>
+	{%if yourOrder %}
+		<h2> Here is the data on your order </h2>
+		<h3> Order ID: {{yourOrder.order_ID}}</h3>
+
 	{% endif %}
+	<!--a list of all orders from this store-->
 	{% if orders %}
 	<h2></h2>
 	<table>
