adding update functionalities -- bugggy

--- a/dbproject/template/browse.html
+++ b/dbproject/template/browse.html
@@ -52,7 +52,7 @@
 				<th> Product Price </th>
 				<th> Product Active </th>
 				<th> Product Stock Quantity </th>
-				<th> Supplys </th>
+				<th> Supplies </th>
 				<th> Order </th>
 				<th> Contains </th>
 				<th> Product Name </th>
@@ -65,8 +65,8 @@
 				<td style="text-align: right"> $ {{ p.product_price }} </td>
 				<td> {{ p.product_active  }}</td>
 				<td> {{ p.product_stock_quantity }} </td>
-				<td> {{ p.supplys }} </td>
-				<td> {{ p.order }} </td>
+				<td> {{ p.supplies }} </td>
+				<td> {{ p.orders }} </td>
 				<td> {{ p.contains }} </td>
 				<td> {{ p.product_name }} </td>
 
