Untested changes for add and delete+html

--- a/dbproject/template/staffUpdate.html
+++ b/dbproject/template/staffUpdate.html
@@ -45,6 +45,33 @@
 
 		</form>
 	</h2>
+
+	<h1>Staff Add:
+	</h1>
+
+	<h2>
+		Add:
+		<form>
+			<h3>
+			<input type="Submit" name="Click to Add Items" onclick="javascript: form.action='/staffAddItems/';">
+		</form>
+	</h2>
+
+
+	<h1>Staff Delete:
+	</h1>
+
+	<h2>
+		Add:
+		<form>
+			<h3>
+			Fill in what you want to update.  If you wish to leave anything unchanged, leave the field blank.</h3>
+			Type Product ID To Delete: <input type="Text" name="productIDtoChange" value="{{ productIDtoChange }}"/>
+			Type User ID To Delete: <input type="Text" name="userIDtoChange" min="0" value="{{ userIDtoChange }}"/>
+			Type Order ID To Delet: <input type="Order" name="orderIDtoChange" min="0" value="{{ orderIDtoChange }}"/>
+			<input type="Submit" name="Click to Delete Items" onclick="javascript: form.action='/staffItems/';">
+		</form>
+	</h2>
     
 	Here is a list of things you can change:
 
