--- a/dbproject/template/staffCreateItemsToAdd.html
+++ b/dbproject/template/staffCreateItemsToAdd.html
@@ -31,26 +31,29 @@
 	<h1>Item ADD:: NOAH NEEDS TO FINISH UPDATING THIS PAGE
 	</h1>
 
+	{% if errorMessage %}
+		<h1 style="color: red"> {{errorMessage}} </h1>
+	{% endif %}
+
 	<h2>
 		Update:
 		<form>
 			<h3>
 			Fill in what you want to update.  If you wish to leave anything unchanged, leave the field blank.</h3>
-				{% if productToChange %}
 				<table style="padding: 5px; font-size:50%" id="Products">				
 				<tr style="font: bold"> 
 					<th> Product ID </th>
 					<th> Product Name </th>
 					<th> Product Description </th>
 					<th> Product Price </th>
-					<th> Product Active </th>
+					<th> Product Active (1 for active, 0 for inactive) </th>
 					<th> Product Stock Quantity </th>
-					<th> Supplys </th>
+					<th> Supplies </th>
 					<th> Order </th>
 					<th> Contains </th>
 				</tr>
 				<tr >
-					<div style="display: "><input type="Text" name="productToChangeID" value="" /></div>
+					<td><div style="display: "><input type="Text" name="productToChangeID" value="" /></div></td>
 					<td> <input type="Text" name="productName" value="" /></td>
 					<td> <input type="Text" name="productDescription" value="" /></td>
 					<td> <input type="Text" name="productPrice" value="" /></td>
@@ -62,28 +65,24 @@
 
 				</tr>
 				</table>
-			{% endif %}
 
-			{% if userToChange %}
 				<table style="padding: 5px; font-size:50%" id="Products">				
 				<tr style="font: bold"> 
+					<th> User ID </th>					
 					<th> User Name</th>
-					<th> User ID </th>
 					<th> User Password </th>
 					<th> User Address</th>
 					<th> User is Staff </th>
 				</tr>
 				<tr >
+					<td><div style="display: "><input type="Text" name="userToChangeID" value="" /></div></td>					
 					<td> <input type="Text" name="UserName" value="" /></td>
-					<div style="display: "><input type="Text" name="userToChangeID" value="" /></div>
 					<td> <input type="Text" name="UserPassword" value="" /></td>
 					<td> <input type="Text" name="UserAddress" value="" /></td>
 					<td> <input type="Text" name="UserIsStaff" value="" /></td>
 				</tr>
 				</table>
-			{% endif %}
 
-			{% if orderToChange %}
 				<table style="padding: 5px; font-size:50%" id="Products">				
 				<tr style="font: bold"> 
 					<th> Order ID </th>
@@ -91,30 +90,19 @@
 					<th> Order Date</th>
 				</tr>
 				<tr >
-					<div style="display: "><input type="Text" name="orderToChangeID" value="" /></div>
+					<td><div style="display: "><input type="Text" name="orderToChangeID" value="" /></div></td>
 					<td> <input type="Text" name="OrderPaid" value="" /></td>
 					<td> <input type="Text" name="OrderDate" value="" /></td>
 
 				</tr>
 				</table>
-			{% endif %}
 			<input type="Submit" value="Update" onclick="javascript: form.action='/staffAddItems/';">
 
 
 			
 
 		</form>
-			<div style="display: ">
-			{% if productName %}
-			Displaying Product Name To Update: <input type="Text" name="productName" value="{{ productName }}"/>
-			{% endif %}
-			{% if userName %}
-			Displaying Username To Update: <input type="Text" name="userName" min="0" value="{{ userName }}"/>
-			{% endif %}
-			{% if orderID %}
-			Displaying Order To Update: <input type="Order" name="OrderID" min="0" value="{{ orderID }}"/>
-			{% endif %}
-			</div>
+			
 	</h2>
     
 	
