--- a/dbproject/template/orderPlaced.html
+++ b/dbproject/template/orderPlaced.html
@@ -67,12 +67,20 @@
 			<td>Order ID</td>
 			<td>Order Date</td>
 			<td>Order Paid</td>
+			<td>Contains - Quantity</td>
+			<td>Contains - Products </td>
 		</tr>
 		{% for o in orders %}
 		<tr>
 			<td> {{ o.order_id }}</td>
 			<td> {{ o.order_date }} </td>
 			<td> {{ o.order_paid  }}</td>
+			<td> {{ o.contains.quantity}} </td>
+			<td> {% for p in o.contains.productsLONGNAME.all %} 
+				ID: {{p.product_id}},
+				Name: {{p.product_name}} <br> 
+				{% endfor %}
+			</td>
 		</tr>
 		{% endfor %}
 
